#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: Thu Mar 31 11:51:22 2005 by William A. Perkins <perk@leechong.pnl.gov>
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(mass2.f90)
AM_INIT_AUTOMAKE(mass2,0.30)
dnl AC_CANONICAL_HOST()

# -------------------------------------------------------------
# Stuff to include subdirectories
# -------------------------------------------------------------
SUBDIRS="time_series util"
AC_SUBST(SUBDIRS)

                                # variables to define the solver used
AC_SUBST(SOLVERSRC)
AC_SUBST(SOLVEROBJ)
AC_SUBST(SOLVERLDFLAGS)

# -------------------------------------------------------------
# Initialization/Defaults
# -------------------------------------------------------------

                                # use the internal TDMA solver by default
SOLVERSRC=solver_tdma.f90
SOLVEROBJ='solver_tdma.o'
SOLVERFFLAGS=
SOLVERLDFLAGS=

# -------------------------------------------------------------
# Need to check for MPI first
# -------------------------------------------------------------
dnl AC_LANG_PUSH(Fortran 77)

dnl AC_ARG_ENABLE(mpi, 
dnl     [  --enable-mpi            use MPI (try --help for more options)])

dnl if test x"$enable_mpi" = x"yes"; then
dnl     mpiok=""
dnl     ACX_MPI(mpiok=1)
dnl     if test x"$mpiok" = x; then
dnl         AC_MSG_ERROR([Failed to find MPI or F90 MPI compiler for --enable-mpi], 10)
dnl     fi
dnl     AC_MSG_NOTICE([Configuring parallel MASS2 using MPI])
dnl     F90=$MPIF90
dnl     F77=$MPIF77
dnl else
dnl     AC_MSG_NOTICE([Configuring single processor MASS2]) 
dnl fi

# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()
AC_PROG_MAKE_SET()
AC_PROG_F90()

# FCFLAGS="$FCFLAGS $F90FLAGS"

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------

                                # choose the sixpack solver library

AC_ARG_WITH(sixpack,
    [  --with-sixpack=dir           use the sixpack solver library in dir],
    SOLVERSRC=solver_sixpack.f90
    SOLVEROBJ='solver_sixpack.$(OBJEXT)'
    SOLVERLDFLAGS="-L$withval/lib -lsixpack")

                                # choose the aztec solver library

AC_ARG_WITH(aztec,
    [  --with-aztec=dir             use the Aztec solver library in dir],
    SOLVERSRC=solver_aztec.f90
    SOLVEROBJ='solver_aztec.$(OBJEXT)'
    SOLVERFFLAGS="-I$withval/lib"
    SOLVERLDFLAGS="-L$withval/lib -laztec")

FCFLAGS="$FCFLAGS $SOLVERFFLAGS"

# -------------------------------------------------------------
# make sure the NetCDF library works
# -------------------------------------------------------------
ACX_NetCDF77()

FCFLAGS="$FCFLAGS -I$NETCDF_INCLUDES_PATH"

# -------------------------------------------------------------
# make sure the CGNS library works
# -------------------------------------------------------------
ACX_CGNS77()

FCFLAGS="$FCFLAGS -I$CGNS_INCLUDE_PATH"

# -------------------------------------------------------------
# check the solver library
# -------------------------------------------------------------

                                # special flags may be needed
                                # depending on the solver and compiler

case $host in
    i?86*linux*)
        case $F77 in
                            # The Absoft compiler
            f95|f90)
                case $SOLVERSRC in
                    *aztec*)
                        SOLVERLDFLAGS="$SOLVERLDFLAGS -lm -lg2c"
                        ;;
                    *)
                esac
                ;;
            *)
        esac
        ;;
    alpha*linux*|alphaev*-dec-osf*)
                            # The DEC/Compaq/HP compiler on Alpha Platforms
        case $F77 in
            f90|f95|fort)
                case $SOLVERSRC in
                    *aztec*)
                        SOLVERLDFLAGS="$SOLVERLDFLAGS -lm -lg2c"
                        ;;
                    *)
                esac
                ;;
            *)
        esac
        ;;
    *)
        
esac

# -------------------------------------------------------------
# assemble compiler flags and test
# -------------------------------------------------------------
AC_LANG(Fortran)
                                # search for modules in the
                                # time_series directory

FCFLAGS="$FCFLAGS ${F90MODPATH}time_series"
FFLAGS="$FCFLAGS"
LIBS="$LIBS $F90LIBS"

AC_CONFIG_SUBDIRS(time_series)
AC_OUTPUT(Makefile util/Makefile util/cart_grid/Makefile)

