#! /bin/sh
# -------------------------------------------------------------
# file: configure.in
# -------------------------------------------------------------
# -------------------------------------------------------------
# Battelle Memorial Institute
# Pacific Northwest Laboratory
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created March 25, 2003 by William A. Perkins
# Last Change: 2013-11-06 12:58:09 d3g096
# -------------------------------------------------------------

# -------------------------------------------------------------
# Initialization
# -------------------------------------------------------------
AC_INIT(mass2.f90)
AM_INIT_AUTOMAKE(mass2,0.30)
AM_MAINTAINER_MODE()

# -------------------------------------------------------------
# Stuff to include subdirectories
# -------------------------------------------------------------
SUBDIRS="gastemp time_series util"
AC_SUBST(SUBDIRS)

                                # variables to define the solver used
AC_SUBST(SOLVERSRC)
AC_SUBST(SOLVEROBJ)
AC_SUBST(SOLVERLDFLAGS)

# -------------------------------------------------------------
# Initialization/Defaults
# -------------------------------------------------------------

                                # use the internal TDMA solver by default
SOLVERSRC=solver_tdma.f90
SOLVEROBJ='solver_tdma.$(OBJEXT)'
SOLVERFFLAGS=
SOLVERLDFLAGS=

# -------------------------------------------------------------
# Checks for Programs we need
# -------------------------------------------------------------
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()
AC_PROG_MAKE_SET()
AC_PROG_FC()
AC_PROG_F90()

# FCFLAGS="$FCFLAGS $F90FLAGS"

# -------------------------------------------------------------
# check some command line options
# -------------------------------------------------------------

                                # choose the sixpack solver library

AC_ARG_WITH(sixpack,
    [  --with-sixpack=dir           use the sixpack solver library in dir],
    SOLVERSRC=solver_sixpack.f90
    SOLVEROBJ='solver_sixpack.$(OBJEXT)'
    SOLVERLDFLAGS="-L$withval/lib -lsixpack")

                                # choose the aztec solver library

AC_ARG_WITH(aztec,
    [  --with-aztec=dir             use the Aztec solver library in dir],
    SOLVERSRC=solver_aztec.f90
    SOLVEROBJ='solver_aztec.$(OBJEXT)'
    SOLVERFFLAGS="-I$withval/lib"
    SOLVERLDFLAGS="-L$withval/lib -laztec")

FCFLAGS="$FCFLAGS $SOLVERFFLAGS"

# -------------------------------------------------------------
# make sure the NetCDF library works
# -------------------------------------------------------------
ACX_NetCDF77()

FCFLAGS="$FCFLAGS -I$NETCDF_INCLUDES_PATH"

# -------------------------------------------------------------
# make sure the CGNS library works
# -------------------------------------------------------------
ACX_CGNS77()

FCFLAGS="$FCFLAGS $CGNS_FCFLAGS"

# -------------------------------------------------------------
# check the solver library
# -------------------------------------------------------------

                                # special flags may be needed
                                # depending on the solver and compiler

case $host in
    i?86*linux*)
        case $F77 in
                            # The Absoft compiler
            f95|f90)
                case $SOLVERSRC in
                    *aztec*)
                        SOLVERLDFLAGS="$SOLVERLDFLAGS -lm -lg2c"
                        ;;
                    *)
                esac
                ;;
            *)
        esac
        ;;
    alpha*linux*|alphaev*-dec-osf*)
                            # The DEC/Compaq/HP compiler on Alpha Platforms
        case $F77 in
            f90|f95|fort)
                case $SOLVERSRC in
                    *aztec*)
                        SOLVERLDFLAGS="$SOLVERLDFLAGS -lm -lg2c"
                        ;;
                    *)
                esac
                ;;
            *)
        esac
        ;;
    *)
        
esac

# -------------------------------------------------------------
# assemble compiler flags and test
# -------------------------------------------------------------
AC_LANG(Fortran)
                                # search for modules in the
                                # time_series directory

FCFLAGS="$FCFLAGS ${F90MODPATH}time_series ${F90MODPATH}gastemp"
FFLAGS="$FCFLAGS"
LIBS="$LIBS $F90LIBS"

AC_CONFIG_SUBDIRS(time_series)
AC_CONFIG_FILES([
    Makefile 
    gastemp/Makefile
    util/Makefile 
    util/cart_grid/Makefile
])
AC_OUTPUT()
